@@ -117,6 +117,7 @@ it from source control: http://www.mediawiki.org/wiki/Download_from_SVN
 * Treat "allmessagesnotsupporteddb" as wikitext when echoing; change default text
 * (bug 5497) regeression in HTML normalization in 1.6 (unclosed <li>,<dd>,<dt>)
 * (bug 5709) Allow customisation of separator for categories
+* (bug 5684) Introduce Special:Randomredirect
 
 == Compatibility ==
 
